Fixing z-index so bg img is in back

--- a/sass/services.scss
+++ b/sass/services.scss
@@ -10,6 +10,9 @@
   color: $dark-font-colour;
   padding: 0 $section-spacing-extra-large $section-spacing-extra-large;
   position: relative;
+  background-image: url("/images/splodge-rotated-medium.png");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 .service-wrapper {
@@ -43,20 +46,13 @@
     position: absolute;
     top: 2rem;
     left: 2rem;
-    z-index: -1;
+    z-index: 1;
   }
-
-  // &:nth-of-type(1)::after {
-  //   background-color: $dark-brown;
-  // }
-
-  // &:nth-of-type(1)::after {
-  //   background-color: $dark-green;
-  // }
 }
 
-.service-text-wrapper {
-  // font-size: 0.75rem;
+.service-image {
+  position: relative;
+  z-index: 2;
 }
 
 .service-title {
